styling fix for non-responsive table overflow

--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -15,6 +15,7 @@ body,
 #root {
     height: 100%;
     font-size: 16px;
+    overflow-y: auto;
 }
 *,
 *:before,
@@ -31,6 +32,7 @@ main {
     height: 100%;
     display: flex;
     flex-direction: column;
+    overflow-y: auto;
 }
 body {
     background-color: #222;
