--- a/resources/css/highScores.scss
+++ b/resources/css/highScores.scss
@@ -1,10 +1,16 @@
 section.highScores {
-    margin: 10px;
-    padding: 10px;
+    h4 {
+        padding: 10px 20px;
+    }
     border-radius: 3px;
     min-height: 200px;
     table {
         width: 100%;
+        padding-bottom: 20px;
+        td, th {
+            padding: 5px;
+            padding-left: 20px;
+        }
         thead {
             tr th {
                 &.index {
